--- a/cltversion.htm
+++ b/cltversion.htm
@@ -33,7 +33,7 @@
 
         <section id="Codigos">
             <h2><u>Códigos</u></h2>
-            <p>Para visualizar os códigos do git-hub que fazem todo esse controle é só clicar no link a segir: <a href="https://drive.google.com/file/d/1GO6KtnxcmwRA5Yv12fl23CPaQElHlXkY/view">Códigos-git-hub</a></p>
+            <p>Para visualizar os códigos do git-hub que fazem todo esse controle é só clicar no link a segir: <a href="https://drive.google.com/file/d/1GO6KtnxcmwRA5Yv12fl23CPaQElHlXkY/view">Códigos git-hub</a></p>
         </section>
 
     </main>
